# aethernova

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPANY_GOAL.md  CORE_SYSTEMS_FIX_RESULTS.json  CORE_SYSTEMS_IMPROVEMENT_REPORT.md  CRITICAL_EMERGENCY_RECOVERY_RESULTS.json  CRITICAL_SYSTEMS_PROGRESS.md  CyberPack.txt  Dockerfile  FINAL_ECOSYSTEM_HEALTH_REPORT.json  Makefile  README.md  TEST_DEPLOY.md  UNHEALTHY_SYSTEMS_ANALYSIS.json  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_agent_system.py  tox.ini
agent_mash/: COMPLETE_CORE_STATUS_REPORT.md  COMPLETION_REPORT.md  CORE_HEALTH_REPORT.json  DETAILED_CORE_INSPECTION.json  LAUNCH_REPORT.md  Makefile  README.md  __init__.py  agent_bus.py  automation-core_check_report.json  core_agents_integrated_launch.py  core_integrated_launch.py  dashboard.html  extended_integrated_launch.py  fix_agents.py  identity-access-core_check_report.json  launch.py  mega_intelligence_system.py  mega_intelligence_system_simple.py  pyproject.toml  requirements.txt  run_agents.py  simple_launch.py  strategy_router.py  strategy_router_old.py
agent_mash/bootstrap/: init.py  invariants.py  self_check.py
agent_mash/cfo/: __init__.py
agent_mash/config/: core_integration.yaml  enhanced_agents_config.json
agent_mash/coo/: __init__.py
agent_mash/core/: advanced_data_processor.py  agent_message.py  agent_orchestra.py  base_agent.py  context_bus.py  contracts.py  decision_engine.py  enhanced_base_agent.py  escalation.py  external_api_integration.py  healthcheck.py  lifecycle.py  permissions.py  project_auditor.py  registry.py  routing.py  state.py  system_auditor.py
agent_mash/examples/: enhanced_agents_demo.py
agent_mash/governance/: ai_governor.py  approvals.py  audit_log.py  decision_trace.py  ethics_gate.py  policies.yaml  risk_matrix.py
agent_mash/interfaces/: commands.py  contracts.py  events.py  schemas.py
agent_mash/memory/: audit_snapshots.py  decisions.py  long_term.py  short_term.py
agent_mash/monitoring/: agent_monitor.py  monitoring_dashboard.py
agent_mash/planner/: goal_orchestrator.py  task_orchestrator.py
agent_mash/protocols/: grpc_bus.py  protocol_config.yaml  redis_bus.py  zmq_bus.py
agent_mash/schema/: message_types.py
agent_mash/scripts/: core_dashboard.py  core_health_checker.py  core_system_fixer.py  core_system_template.py  critical_analyzer.py  detailed_core_inspector.py  emergency_recovery_tool.py  final_health_checker.py  fix_remaining_systems.py  integrated_agent_system.py  launch_integrated_system.sh  partially_healthy_analyzer.py  quick_core_check.py  run_enhanced_agents.py  run_with_monitoring.py  unhealthy_analyzer.py  unhealthy_repairer.py
agent_mash/strategies/: api_gateway_strategy.py  cli_strategy.py  telegram_strategy.py
agent_mash/tests/: README.md  conftest.py  integration_tests.py  pyproject.toml  pytest.ini  test_agent_bus.py  test_enhanced_agents.py  test_protocols.py  test_registry.py  test_strategy_router.py  tmp_check_auditor.py
agent_mash/utils/: message_schema.py  retry_policy.py
core-systems/aethernova-chain-core.backup.emergency.8989.30540362/: Cargo.toml  LICENSE
core-systems/automation-core/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
core-systems/avm-core/: Dockerfile  Makefile  README.md  VERSION  __init__.py  config.py  config.py.backup.8009.364576353  main.py  main.py.backup.8009.364054373  pyproject.toml  requirements.txt
core-systems/chronowatch-core/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  config.py  mypy.ini  pyproject.toml  ruff.toml
core-systems/cybersecurity-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  main.py  mypy.ini  pyproject.toml  ruff.toml
core-systems/datafabric-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  NOTICE  README.md  VERSION  __init__.py  bootstrap.py  context.py  main.py  mypy.ini  pyproject.toml  ruff.toml  settings.py
core-systems/engine-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
core-systems/human-sovereignty-core/: README.md  pyproject.toml  pytest.ini
core-systems/ledger-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  config.py  main.py  mypy.ini  pyproject.toml  ruff.toml
core-systems/mythos-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
core-systems/neuroforge-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  THIRD_PARTY_NOTICES.md  VERSION  config.py  main.py  mypy.ini  pyproject.toml  ruff.toml
core-systems/oblivionvault-core/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  VERSION  __init__.py  config.py  mypy.ini  pyproject.toml  ruff.toml
reva-studio/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
(+12138 files in other folders)
