[project]
name = "aethernova"
version = "0.1.0"
description = "Aethernova AI, governance, security, and distributed-systems platform"
authors = [{ name = "Aethernova Team" }]
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["ai_core*"]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | archive
  | build
  | dist
)/
'''

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "flake8==7.0.0",
    "mypy==1.10.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "tox==4.15.0",
    "sphinx==7.3.7",
    "mkdocs==1.6.0",
    "watchdog==4.0.1",
]

database = [
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "sqlalchemy-utils==0.41.2",
    "psycopg2-binary==2.9.9",
    "databases==0.8.0",
]

redis = [
    "redis==5.0.4",
    "aio_pika==9.4.1",
    "celery==5.3.6",
    "kombu==5.3.6",
]

ai = [
    "torch==2.3.0",
    "transformers==4.43.2",
    "ray[rllib]==2.21.0",
    "sentence-transformers==2.6.1",
    "onnxruntime==1.17.3",
    "langchain==0.2.2",
    "openai==1.31.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
norecursedirs = [
    "archive",
    "frontend/node_modules",
    ".venv",
]
