# agent_mash/pyproject.toml
# НЕ МОГУ ПОДТВЕРДИТЬ ЭТО: name/version/requires-python/dependencies/package layout
# Причина: вы не предоставили фактические значения и структуру исходников.

[build-system]
# PEP 517/518: build requirements + build backend
requires = ["hatchling>=1.16"]
build-backend = "hatchling.build"

[project]
# PEP 621 metadata (PyPA / PEP 621)
name = "agent-mash"               # TODO: подтвердите фактическое имя пакета
version = "0.1.0"                 # TODO: подтвердите фактическую версию (или используйте VCS-версионирование)
description = "Industrial-grade agent_mash package"  # TODO
readme = "README.md"              # TODO: если README отсутствует, замените или удалите
requires-python = ">=3.11"        # TODO: подтвердите целевую версию Python
license = { text = "Proprietary" }# TODO: подтвердите лицензию/политику
authors = [{ name = "Vlad", email = "unknown@example.com" }]  # TODO: подтвердите
keywords = ["agents", "automation", "platform"]               # TODO

# TODO: подтвердите реальные runtime-зависимости
dependencies = [
  # "pydantic>=2.0",
  # "httpx>=0.25",
]

[project.optional-dependencies]
# Набор для локальной разработки и CI
dev = [
  "ruff>=0.5",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.0",
  "types-setuptools",
]

[project.urls]
Homepage = "https://example.com"  # TODO
Repository = "https://example.com/repo"  # TODO

# -----------------------
# Hatch (build selection)
# -----------------------
[tool.hatch.build]
# Более безопасно явно определять включение в артефакты, но layout я НЕ МОГУ подтвердить.
# Ниже — консервативная конфигурация, требующая подстановки реальных путей.
exclude = [
  "/.git",
  "/.github",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/dist",
  "/build",
  "/htmlcov",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
# TODO: подтвердите layout.
# Если пакет лежит как agent_mash/ (обычный layout), оставьте так.
packages = ["agent_mash"]

[tool.hatch.build.targets.sdist]
# TODO: подтвердите файлы, которые реально существуют и должны попадать в sdist.
include = [
  "/agent_mash",
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 100
target-version = "py311"          # TODO: синхронизируйте с requires-python
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = [
  "E203", # совместимость с форматтерами
]
unfixable = ["F401"]              # пример: не автоудалять импорты, если это ломает публичный API

[tool.ruff.lint.isort]
known-first-party = ["agent_mash"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# -----------------------
# MyPy (type checking)
# -----------------------
[tool.mypy]
python_version = "3.11"           # TODO: синхронизируйте с requires-python
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false     # TODO: включите true, когда код готов
disallow_incomplete_defs = false  # TODO
ignore_missing_imports = true     # TODO: по мере стабилизации замените на точечные overrides
strict_equality = true

# Пример точечного ослабления для конкретных модулей (TODO: подтвердите реальные пути)
# [[tool.mypy.overrides]]
# module = ["agent_mash.vendor.*"]
# ignore_errors = true

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "--disable-warnings",
  "--maxfail=1",
]
testpaths = ["tests"]
xfail_strict = true

# -----------------------
# Coverage.py
# -----------------------
[tool.coverage.run]
branch = true
parallel = true
source = ["agent_mash"]
omit = [
  "tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90                  # TODO: подтвердите целевой порог
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
