[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "reva-studio"
version = "0.1.0"
description = "Industrial-grade backend platform for Reva Studio."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "Reva Studio" }
]
keywords = [
  "fastapi",
  "asyncio",
  "booking",
  "crm",
  "beauty-salon",
  "reva-studio",
  "saas",
  "telegram-bot",
  "postgresql",
  "redis"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "redis[hiredis]>=6.4.0",
  "celery>=5.5.0",
  "httpx>=0.28.0",
  "orjson>=3.11.0",
  "python-multipart>=0.0.20",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt[crypto]>=2.10.0",
  "email-validator>=2.2.0",
  "phonenumbers>=9.0.0",
  "tenacity>=9.1.0",
  "structlog>=25.4.0",
  "prometheus-client>=0.23.0",
  "sentry-sdk[fastapi]>=2.38.0",
  "typing-extensions>=4.15.0; python_version < '3.13'"
]

[project.urls]
Homepage = "https://reva.studio"
Documentation = "https://reva.studio/docs"
Repository = "https://github.com/reva-studio/reva-studio"
Issues = "https://github.com/reva-studio/reva-studio/issues"

[project.optional-dependencies]
observability = [
  "opentelemetry-api>=1.36.0",
  "opentelemetry-sdk>=1.36.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0",
  "opentelemetry-exporter-otlp>=1.36.0"
]
devtools = [
  "watchfiles>=1.1.0",
  "rich>=14.1.0",
  "ipython>=9.4.0"
]

[dependency-groups]
lint = [
  "ruff>=0.13.0"
]
typecheck = [
  "mypy>=1.18.0"
]
test = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.0",
  "pytest-mock>=3.14.0",
  "faker>=37.0.0",
  "coverage[toml]>=7.10.0",
  "anyio>=4.11.0"
]
security = [
  "bandit>=1.8.0",
  "pip-audit>=2.9.0"
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.0"
]
dev = [
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "test" },
  { include-group = "security" },
  { include-group = "docs" },
  "pre-commit>=4.3.0"
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/reva_studio"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "alembic/",
  "docs/",
  "README.md",
  "LICENSE",
  "alembic.ini"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
xfail_strict = true
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=src",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov-report=html"
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:pkg_resources.*"
]
markers = [
  "unit: fast isolated tests",
  "integration: integration tests with infrastructure",
  "e2e: end-to-end tests",
  "slow: slow tests"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = [
  "tests/*",
  "*/__init__.py",
  "*/migrations/*",
  "*/alembic/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "except ImportError:"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]

[tool.pip-audit]
desc = true
progress-spinner = false
strict = true