[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mash-tests"
version = "0.1.0"
description = "Test suite configuration for agent_mash"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]

markers = [
    "unit: isolated unit tests without IO",
    "integration: integration tests with controlled dependencies",
    "e2e: end-to-end tests",
    "slow: long-running tests, excluded from default runs",
    "flaky: unstable tests, allowed only temporarily with tracking"
]

xfail_strict = true

filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["agent_mash"]
omit = [
    "*/tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
